--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
+<!DOCTYPE HTML>
 <html>
-<head>
-<style>
-table,tr,th,td
-{
-border: 5px  solid blue;
-border-collapse: collapse;
-border-style: double;
-height: 50px;
-width: 300px;
-
-}
-tr:nth-child(odd) {background-color:tomato;}
-</style>
-
-</head>
-<body>
-<table  align=center>
-	<tr>
-		<th>Name</th>
-		<th>City</th>
-	</tr>
-	<tr>
-		<td>Amit</td>
-		<td>kota</td>
-	</tr>
-	<tr>
-		<td>Ajay</td>
-		<td>Cochin</td>
-	</tr>
-	<tr>
-		<td>Deepak</td>
-		<td>New Delhi</td>
-	</tr>
-	<tr>
-		<td>Sarvesh</td>
-		<td>New Delhi</td>
-	</tr>
-
-</body>
+	<head>
+		<title>Sandy</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<center>
+	<body class="is-loading" background="bg.png">
+			<div id="wrapper">
+					<section id="main">
+						<header>
+							<img class="avatar"  src="iam.jpg" width="200px" height="200px" alt="image"  />
+							<h1>S Sandeep Sandy</h1>
+							<p>A Learner</p>
+						</header>
+						<footer class="icons">
+							<a href="https://twitter.com/Sandeep_sandy63" class="fa-twitter"><img src="twitter.png" width="50px" height="50px" alt="new"></a>
+							<a href="https://www.instagram.com/sandeepsandy6336/" class="fa-instagram"><img src="insta.png" width="50px" height="50px" alt="new"></a>
+							<a href="https://www.facebook.com/profile.php?id=100011580152833" class="fa-facebook"><img src="fb.png" width="50px" height="50px" alt="new"></a>
+						</footer>
+					</section>
+					<footer id="footer">
+						<p class="copyright">
+							<small>Sandeep Sandy  |
+							Design:</small> <a class="mail" href="mailto:sandy798909@gmail.com">Mail</a>
+						</p>
+					</footer>
+			</div>
+	</body>
+</center>
 </html>
-
-
